[gd_scene load_steps=2 format=3 uid="uid://bd7exlqtqkmxt"]

[ext_resource type="Script" path="res://entities/enemy spawner/enemy_spawner.gd" id="1_h11g0"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_h11g0")

[node name="Spawn Timer" type="Timer" parent="."]
autostart = true

[node name="Spawn Setting Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Spawn Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Spawn Setting Timer" to="." method="_on_spawn_setting_timer_timeout"]
